--- a/Sources/Constants/Languages/Arabic.json
+++ b/Sources/Constants/Languages/Arabic.json
@@ -585,5 +585,10 @@
   "otherPassive_6_2_text_1": "تشمل إقامة المزارع والجولات والأنشطة التعليمية.",
   "otherPassive_6_3_title": "الزراعة في البيوت الزجاجية",
   "otherPassive_6_3_text_0": "زراعة المحاصيل في بيئة مراقبة.",
-  "otherPassive_6_3_text_1": "يسمح بالإنتاج على مدار السنة والحماية من التأثيرات الجوية."
+  "otherPassive_6_3_text_1": "يسمح بالإنتاج على مدار السنة والحماية من التأثيرات الجوية.",
+  "AD": "إعلان",
+  "playGames": "العب الألعاب",
+  "playGamesDesc": "ابدأ مغامرتك بنقرة - العب الآن!",
+  "playQuiz": "العب مسابقة",
+  "playQuizDesc": "اغمر نفسك بالمعرفة - حان وقت المسابقة، العب الآن!"
 }
