--- a/Sources/Constants/Languages/German.json
+++ b/Sources/Constants/Languages/German.json
@@ -589,5 +589,10 @@
   "otherPassive_6_2_text_1": "Enthält Aufenthalte auf dem Bauernhof, Touren und Bildungsaktivitäten.",
   "otherPassive_6_3_title": "Gewächshausanbau",
   "otherPassive_6_3_text_0": "Anbau von Nutzpflanzen in kontrollierter Umgebung.",
-  "otherPassive_6_3_text_1": "Ermöglicht die ganzjährige Produktion und schützt vor Witterungseinflüssen."
+  "otherPassive_6_3_text_1": "Ermöglicht die ganzjährige Produktion und schützt vor Witterungseinflüssen.",
+  "AD": "Anzeige",
+  "playGames": "Spiele spielen",
+  "playGamesDesc": "Beginne dein Abenteuer mit einem Tap - Jetzt spielen!",
+  "playQuiz": "Quiz spielen",
+  "playQuizDesc": "Tauche in Wissen ein - Quizzeit, Jetzt spielen!"
 }
