--- a/Sources/Constants/Languages/Hindi.json
+++ b/Sources/Constants/Languages/Hindi.json
@@ -589,5 +589,10 @@
   "otherPassive_6_2_text_1": "फार्म स्टे, यात्राएँ, और शैक्षिक गतिविधियों को शामिल करता है।",
   "otherPassive_6_3_title": "ग्रीनहाउस व्यवसाय",
   "otherPassive_6_3_text_0": "नियंत्रित वातावरण में फसल उगाना।",
-  "otherPassive_6_3_text_1": "वर्षभर उत्पादन और मौसम से सुरक्षा प्राप्त करने की अनुमति देता है।"
+  "otherPassive_6_3_text_1": "वर्षभर उत्पादन और मौसम से सुरक्षा प्राप्त करने की अनुमति देता है।",
+  "AD": "विज्ञापन",
+  "playGames": "खेल खेलें",
+  "playGamesDesc": "एक टैप के साथ अपनी यात्रा शुरू करें - अभी खेलें!",
+  "playQuiz": "प्रश्नोत्तरी खेलें",
+  "playQuizDesc": "ज्ञान में डूबें - प्रश्नोत्तरी समय, अभी खेलें!"
 }
