--- a/Sources/Constants/Languages/Indonesian.json
+++ b/Sources/Constants/Languages/Indonesian.json
@@ -589,5 +589,10 @@
   "otherPassive_6_2_text_1": "Termasuk menginap di peternakan, tur, dan kegiatan edukatif.",
   "otherPassive_6_3_title": "Pertanian Rumah Kaca",
   "otherPassive_6_3_text_0": "Menanam tanaman dalam lingkungan terkontrol.",
-  "otherPassive_6_3_text_1": "Memungkinkan produksi sepanjang tahun dan perlindungan dari cuaca."
+  "otherPassive_6_3_text_1": "Memungkinkan produksi sepanjang tahun dan perlindungan dari cuaca.",
+  "AD": "Iklan",
+  "playGames": "Main Game",
+  "playGamesDesc": "Mulailah petualanganmu dengan satu ketukan - Main Sekarang!",
+  "playQuiz": "Main Kuis",
+  "playQuizDesc": "Menyelami pengetahuan - Waktu Kuis, Main Sekarang!"
 }
