--- a/Sources/Constants/Languages/Korean.json
+++ b/Sources/Constants/Languages/Korean.json
@@ -589,5 +589,10 @@
   "otherPassive_6_2_text_1": "농장 숙박, 투어, 교육 활동을 포함합니다.",
   "otherPassive_6_3_title": "온실 농업",
   "otherPassive_6_3_text_0": "제어된 환경에서 작물을 재배하세요.",
-  "otherPassive_6_3_text_1": "연중 생산을 가능하게 하며 날씨로부터 보호합니다."
+  "otherPassive_6_3_text_1": "연중 생산을 가능하게 하며 날씨로부터 보호합니다.",
+  "AD": "광고",
+  "playGames": "게임 플레이",
+  "playGamesDesc": "한 번의 탭으로 모험을 시작하세요 - 지금 플레이!",
+  "playQuiz": "퀴즈 플레이",
+  "playQuizDesc": "지식을 탐험하세요 - 퀴즈 타임, 지금 플레이!"
 }
