--- a/Sources/Constants/Languages/Russian.json
+++ b/Sources/Constants/Languages/Russian.json
@@ -589,5 +589,10 @@
   "otherPassive_6_2_text_1": "Включает проживание на ферме, экскурсии и образовательные мероприятия.",
   "otherPassive_6_3_title": "Тепличное хозяйство",
   "otherPassive_6_3_text_0": "Выращивание сельскохозяйственных культур в контролируемой среде.",
-  "otherPassive_6_3_text_1": "Позволяет круглогодичное производство и защиту от погодных условий."
+  "otherPassive_6_3_text_1": "Позволяет круглогодичное производство и защиту от погодных условий.",
+  "AD": "Реклама",
+  "playGames": "Играть в игры",
+  "playGamesDesc": "Начните свое приключение одним касанием - Играйте сейчас!",
+  "playQuiz": "Играть в викторину",
+  "playQuizDesc": "Погружайтесь в знания - Время викторины, играйте сейчас!"
 }
