--- a/Sources/Constants/Languages/Turkish.json
+++ b/Sources/Constants/Languages/Turkish.json
@@ -589,5 +589,10 @@
   "otherPassive_6_2_text_1": "Çiftlik konaklamaları, turlar ve eğitim etkinliklerini içerir.",
   "otherPassive_6_3_title": "Sera Yetiştiriciliği",
   "otherPassive_6_3_text_0": "Kontrollü bir ortamda ürün yetiştirme.",
-  "otherPassive_6_3_text_1": "Yıl boyunca üretim yapma ve hava koşullarından korunma imkanı sağlar."
+  "otherPassive_6_3_text_1": "Yıl boyunca üretim yapma ve hava koşullarından korunma imkanı sağlar.",
+  "AD": "Reklam",
+  "playGames": "Oyun Oyna",
+  "playGamesDesc": "Macerana bir dokunuşla başla - Şimdi Oyna!",
+  "playQuiz": "Quiz Oyna",
+  "playQuizDesc": "Bilgiye dal - Quiz Zamanı, Şimdi Oyna!"
 }
