--- a/Sources/Constants/Languages/Arabic.json
+++ b/Sources/Constants/Languages/Arabic.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "للتأكد من حصولك على أفضل العروض الشخصية، نحتاج إلى معرفة لغتك.",
   "Terms": "الشروط",
   "Security": "الأمان",
-  "Notice": "إشعار",
   "ChildrensPrivacy": "خصوصية الأطفال",
   "ChangestoThisPrivacyPolicy": "تغييرات في سياسة الخصوصية هذه",
-  "terms_text_0": "احصل على الماس - الرموز الخطة توفر هذه الخدمة مجانًا وتستخدم للغرض المقصود منها. هذه الصفحة تُستخدم لإبلاغ الزوار بسياستي المتعلقة بجمع واستخدام والكشف عن المعلومات الشخصية إذا قرر أي شخص استخدام خدماتي. إذا اخترت استخدام خدمتي، فأنت توافق على جمع واستخدام هذه المعلومات. تُستخدم المعلومات الشخصية التي أجمعها لتقديم وتحسين الخدمة. لن أستخدم أو أشارك معلوماتك مع أي شخص إلا كما هو موضح في سياسة الخصوصية هذه. المصطلحات المستخدمة في سياسة الخصوصية هذه لها نفس المعاني كما في الشروط والأحكام الخاصة بنا، المتاحة في Get Diamond - Emotes Tips، ما لم يُحدد خلاف ذلك في سياسة الخصوصية هذه.",
-  "terms_text_1": "أقدر ثقتك في تقديم معلوماتك الشخصية لنا، وهذا هو السبب في أننا نسعى لحمايتها باستخدام ممارسات العملاء المقبولة. لكن تذكر أن لا توجد وسيلة نقل على الإنترنت، أو وسيلة أمان إلكترونية، آمنة بنسبة 100% وموثوقة، لا أستطيع ضمان أمانها المطلق.",
-  "terms_text_2": "هذه الخدمات ليست مخصصة للأشخاص دون سن 13 عامًا. لا أجمع عن عمد معلومات تعريف شخصية من الأطفال دون سن 13 عامًا. إذا اكتشفت أن طفلًا دون سن 13 عامًا قدم لي معلومات شخصية، أقوم بحذفها فورًا من خوادمنا. إذا كنت والدًا أو وصيًا وتعلم أن طفلك قدم لنا معلومات شخصية، يرجى الاتصال بي لاتخاذ الإجراءات اللازمة.",
-  "terms_text_3": "قد أقوم بتحديث سياسة الخصوصية الخاصة بنا من وقت لآخر. لذلك ننصحك بمراجعة هذه الصفحة بشكل دوري لأي تغييرات. سأبلغك بأي تغييرات عن طريق نشر سياسة الخصوصية الجديدة على هذه الصفحة.",
-  "terms_text_4": "يرجى ملاحظة أن إجراء تغييرات على التطبيق أو مكوناته محظور تمامًا وقد يؤدي إلى انتهاك شروط الخدمة الخاصة بنا.",
   "English": "الإنجليزية",
   "German": "الألمانية",
   "Hindi": "الهندية",
@@ -590,5 +584,16 @@
   "playGames": "العب الألعاب",
   "playGamesDesc": "ابدأ مغامرتك بنقرة - العب الآن!",
   "playQuiz": "العب مسابقة",
-  "playQuizDesc": "اغمر نفسك بالمعرفة - حان وقت المسابقة، العب الآن!"
+  "playQuizDesc": "اغمر نفسك بالمعرفة - حان وقت المسابقة، العب الآن!",
+  "ContentLiability": "مسؤولية المحتوى",
+  "ReservationofRights": "الاحتفاظ بالحقوق",
+  "Disclaimer": "تنصل",
+  "terms_text_0": "مرحبًا بكم في التطبيقات!\n\nتحدد هذه الشروط والأحكام القواعد واللوائح لاستخدام التطبيق.\n\nباستخدام هذا التطبيق نفترض أنك توافق على هذه الشروط والأحكام. لا تستمر في استخدام التطبيقات إذا كنت لا توافق على جميع الشروط والأحكام المذكورة في هذه الصفحة.\n\nتنطبق المصطلحات التالية على هذه الشروط والأحكام، وبيان الخصوصية وإشعار التنصل وجميع الاتفاقيات: \"العميل\" و\"أنت\" و\"خاصتك\" تشير إليك، الشخص الذي يقوم بتسجيل الدخول إلى هذا الموقع ويتوافق مع شروط وأحكام الشركة. \"الشركة\" و\"نحن\" و\"خاصتنا\" و\"لنا\" تشير إلى شركتنا. \"الطرف\" و\"الأطراف\" أو \"نحن\" تشير إلى كل من العميل ونحن. جميع المصطلحات تشير إلى العرض والقبول والنظر في الدفع اللازم للقيام بعملية مساعدتنا للعميل بأفضل طريقة مناسبة لغرض صريح وهو تلبية احتياجات العميل فيما يتعلق بتقديم خدمات الشركة المحددة، وفقًا للقانون الساري في هولندا. يتم أخذ أي استخدام للمصطلحات أعلاه أو كلمات أخرى في المفرد أو الجمع، أو الكتابة بحروف كبيرة و/أو هو/هي أو هم، على أنها قابلة للتبادل وبالتالي تشير إلى نفس الشيء.",
+  "terms_text_1": "لن نكون مسؤولين عن أي محتوى يظهر على تطبيقك. أنت توافق على حمايتنا والدفاع عنا ضد جميع الادعاءات التي تنشأ عن تطبيقنا. يجب ألا يظهر أي رابط على أي موقع ويب يمكن تفسيره على أنه تشهيري أو فاحش أو جنائي، أو ينتهك أو يدعو إلى انتهاك حقوق أي طرف ثالث.",
+  "terms_text_2": "نحتفظ بالحق في طلب إزالة جميع الروابط أو أي رابط معين إلى تطبيقنا. أنت توافق على إزالة جميع الروابط إلى تطبيقنا فورًا عند الطلب. نحن أيضًا نحتفظ بالحق في تعديل هذه الشروط والأحكام وسياسة الروابط في أي وقت. من خلال الربط المستمر بتطبيقنا، توافق على الالتزام بهذه الشروط والأحكام واتباعها.",
+  "terms_text_3": "إلى أقصى حد يسمح به القانون الساري، نستبعد جميع التمثيلات والضمانات والشروط المتعلقة بتطبيقنا واستخدام هذا الموقع. لا شيء في هذا التنصل:\n\nيحد أو يستبعد مسؤوليتنا أو مسؤوليتك عن الوفاة أو الإصابة الشخصية؛\nيحد أو يستبعد مسؤوليتنا أو مسؤوليتك عن الاحتيال أو التزوير الاحتيالي؛\nيحد أي من مسؤولياتنا أو مسؤولياتك بأي طريقة غير مسموح بها بموجب القانون الساري؛ أو\nيستبعد أي من مسؤولياتنا أو مسؤولياتك التي لا يمكن استبعادها بموجب القانون الساري.\n\nالقيود والمحظورات المتعلقة بالمسؤولية المحددة في هذا القسم وفي أماكن أخرى في هذا التنصل: (أ) تخضع للفقرة السابقة؛ و(ب) تحكم جميع المسؤوليات الناشئة بموجب التنصل، بما في ذلك المسؤوليات الناشئة عن العقد، أو في الضرر، أو لخرق الواجب القانوني.\n\nطالما يتم تقديم الموقع والمعلومات والخدمات على الموقع مجانًا، فلن نكون مسؤولين عن أي خسارة أو ضرر من أي نوع.",
+  "ContactOfficial": "تواصل رسمي",
+  "joinTelegram": "انضم إلى قناتنا على تليجرام!",
+  "joinTelegramDesc": "احصل على التحديثات الفورية، والمحتوى الحصري، وتواصل مع أفراد ذوي الأفكار المماثلة. كن جزءًا من المحادثة!",
+  "JoinNow": "انضم الآن"
 }
