--- a/Sources/Constants/Languages/Hindi.json
+++ b/Sources/Constants/Languages/Hindi.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "सुनिश्चित करने के लिए कि आपको सबसे अच्छा व्यक्तिगत प्रस्ताव मिल सके हमें आपकी भाषा की जानकारी चाहिए।",
   "Terms": "नियम",
   "Security": "सुरक्षा",
-  "Notice": "सूचना",
   "ChildrensPrivacy": "बच्चों की गोपनीयता",
   "ChangestoThisPrivacyPolicy": "इस गोपनीयता नीति में परिवर्तन",
-  "terms_text_0": "जेम्स ईमोटस - आपको इस सेवा का मुफ्त योजना देता है और इसका उपयोग करने के लिए विशेष रूप से योजित है। इस पृष्ठ का उपयोग मेरी नीति के बारे में जानकारी देने के लिए किया जाता है जो व्यक्तिगत जानकारी के संग्रह, उपयोग और खुलासे के बारे में है, अगर कोई भी मेरी सेवाओं का उपयोग करने का निर्णय लेता है। यदि आप मेरी सेवा का उपयोग करने का चयन करते हैं, तो आप इस जानकारी के संग्रह और उपयोग से सहमत हैं। मैं इस जानकारी का उपयोग अच्छी सेवा प्रदान करने और सुधारने के लिए करता हूं। मैं इस नीति के अंतर्गत इस गोपनीयता नीति में विवरण में उपयोग नहीं करूंगा या इसे किसी के साथ साझा नहीं करूंगा, यदि केवल इस गोपनीयता नीति में विशेष रूप से उल्लिखित नहीं किया जाता है।",
-  "terms_text_1": "मैं आपके व्यक्तिगत जानकारी को प्रदान करने में आपके विश्वास की सराहना करता हूँ, जिसके लिए हम इसे स्वीकार्य ग्राहक अभ्यासों का उपयोग करके सुरक्षित रखने का प्रयास करते हैं। लेकिन ध्यान दें कि इंटरनेट पर संचार के किसी भी तरीके या इलेक्ट्रॉनिक सुरक्षा के किसी भी तरीके से पूरी तरह से सुरक्षित और विश्वसनीय नहीं है, मैं इसकी पूरी गारंटी नहीं दे सकता।",
-  "terms_text_2": "ये सेवाएं 13 वर्ष से कम उम्र के व्यक्तियों के लिए नहीं हैं। मैं जानते हुए भी 13 वर्ष से कम उम्र के बच्चों से व्यक्तिगत पहचानीय जानकारी नहीं लेता। अगर मुझे पता चलता है कि कोई 13 वर्ष से कम उम्र का बच्च ने मुझे व्यक्तिगत जानकारी प्रदान की है, तो मैं तुरंत इसे हमारे सर्वर से हटा देता हूँ। अगर आप माता-पिता या अभिभावक हैं और आपको यह पता है कि आपका बच्च ने हमें व्यक्तिगत जानकारी प्रदान की है, तो कृपया मुझसे संपर्क करें ताकि मैं कार्रवाई कर सकूं।",
-  "terms_text_3": "मैं हमारी गोपनीयता नीति को समय-समय पर अपडेट कर सकता हूँ। इसलिए आपको सलाह दी जाती है कि आप नियमित अंतराल पर इस पृष्ठ की जांच करें कि कोई भी बदलाव हुए हैं। मैं इस पृष्ठ पर एक नई गोपनीयता नीति पोस्ट करके आपको किसी भी बदलाव की सूचना दूंगा।",
-  "terms_text_4": "कृपया ध्यान दें कि ऐप या उसके घटकों में बदलाव करना सख्त रूप से प्रतिबंधित है और हमारे सेवा की शर्तों का उल्लंघन का परिणाम हो सकता है।",
   "English": "अंग्रेज़ी",
   "German": "जर्मन",
   "Hindi": "हिंदी",
@@ -594,5 +588,16 @@
   "playGames": "खेल खेलें",
   "playGamesDesc": "एक टैप के साथ अपनी यात्रा शुरू करें - अभी खेलें!",
   "playQuiz": "प्रश्नोत्तरी खेलें",
-  "playQuizDesc": "ज्ञान में डूबें - प्रश्नोत्तरी समय, अभी खेलें!"
+  "playQuizDesc": "ज्ञान में डूबें - प्रश्नोत्तरी समय, अभी खेलें!",
+  "ContentLiability": "सामग्री उत्तरदायित्व",
+  "ReservationofRights": "अधिकारों का आरक्षण",
+  "Disclaimer": "अस्वीकरण",
+  "terms_text_0": "ऐप्स में आपका स्वागत है!\n\nये शर्तें और नियम ऐप के उपयोग के नियमों और विनियमों को दर्शाते हैं।\n\nइस ऐप का उपयोग करके, हम मानते हैं कि आप इन शर्तों और नियमों को स्वीकार करते हैं। यदि आप इस पृष्ठ पर बताए गए सभी शर्तों और नियमों को स्वीकार नहीं करते हैं तो ऐप्स का उपयोग जारी न रखें।\n\nनिम्नलिखित शब्दावली इन शर्तों और नियमों, गोपनीयता वक्तव्य और अस्वीकरण नोटिस और सभी समझौतों पर लागू होती है: \"क्लाइंट\", \"आप\" और \"आपका\" आपसे संबंधित है, जो इस वेबसाइट पर लॉग ऑन करता है और कंपनी की शर्तों और नियमों के साथ अनुरूप है। \"कंपनी\", \"स्वयं\", \"हम\", \"हमारा\" और \"हमें\" हमारी कंपनी को संदर्भित करता है। \"पार्टी\", \"पार्टियों\" या \"हमें\" क्लाइंट और स्वयं दोनों को संदर्भित करता है। सभी शर्तें प्रस्ताव, स्वीकृति और भुगतान पर विचार के लिए आवश्यक हैं ताकि क्लाइंट को सबसे उपयुक्त तरीके से हमारी सहायता प्रक्रिया को संभालने के उद्देश्य से, कंपनी द्वारा बताई गई सेवाओं की प्रदान करने के संबंध में क्लाइंट की आवश्यकताओं को पूरा किया जा सके, जो लागू कानून के अनुसार और उसके अधीन है। उपरोक्त शब्दावली या अन्य शब्दों का एकवचन, बहुवचन, बड़े अक्षरों में और/या वह/वह या वे के किसी भी उपयोग को समानार्थी माना जाता है और इसलिए उसी को संदर्भित करता है।",
+  "terms_text_1": "हम आपकी ऐप पर दिखाई देने वाली किसी भी सामग्री के लिए जिम्मेदार नहीं होंगे। आप हमारी ऐप पर उत्पन्न सभी दावों के खिलाफ हमें सुरक्षित रखने और बचाव करने के लिए सहमत हैं। किसी भी वेबसाइट पर ऐसा कोई लिंक नहीं होना चाहिए जिसे मानहानिकारक, अश्लील या आपराधिक के रूप में व्याख्यायित किया जा सके, या जो किसी तीसरे पक्ष के अधिकारों का उल्लंघन करता हो, अन्यथा उल्लंघन करता हो, या उल्लंघन या अन्य उल्लंघन की वकालत करता हो।",
+  "terms_text_2": "हम आपसे अनुरोध कर सकते हैं कि आप हमारे ऐप से सभी लिंक या किसी विशेष लिंक को हटा दें। आप अनुरोध प्राप्त करने पर तुरंत हमारे ऐप से सभी लिंक हटाने के लिए सहमत हैं। हम इन शर्तों और नियमों और इसकी लिंकिंग नीति को किसी भी समय संशोधित करने का अधिकार सुरक्षित रखते हैं। हमारे ऐप से लगातार लिंक करने से, आप इन लिंकिंग शर्तों और नियमों से बंधे रहने और उनका पालन करने के लिए सहमत होते हैं।",
+  "terms_text_3": "लागू कानून द्वारा अनुमत अधिकतम सीमा तक, हम हमारी ऐप और इस वेबसाइट के उपयोग से संबंधित सभी प्रस्तुतियों, वारंटियों और शर्तों को बाहर करते हैं। इस अस्वीकरण में कुछ भी नहीं होगा:\n\nहमारी या आपकी मृत्यु या व्यक्तिगत चोट के लिए देयता को सीमित या बाहर करें;\nहमारी या आपकी धोखाधड़ी या धोखाधड़ी के गलत बयानों के लिए देयता को सीमित या बाहर करें;\nहमारी या आपकी देयताओं को किसी भी तरह से सीमित करें जो लागू कानून के तहत अनुमत नहीं है; या\nहमारी या आपकी उन देयताओं को बाहर करें जिन्हें लागू कानून के तहत बाहर नहीं किया जा सकता है।\n\nइस अनुभाग और इस अस्वीकरण के अन्य स्थानों में निर्धारित देयता सीमाएं और निषेध: (a) उपरोक्त पैराग्राफ के अधीन हैं; और (b) सभी देयताओं को नियंत्रित करते हैं जो अस्वीकरण के तहत उत्पन्न होती हैं, जिसमें अनुबंध, टोर्ट और वैधानिक कर्तव्य का उल्लंघन शामिल है।\n\nजब तक वेबसाइट और वेबसाइट पर जानकारी और सेवाएं मुफ्त में प्रदान की जाती हैं, हम किसी भी प्रकार के किसी भी नुकसान या क्षति के लिए उत्तरदायी नहीं होंगे।",
+  "ContactOfficial": "आधिकारिक संपर्क",
+  "joinTelegram": "हमारे टेलीग्राम चैनल से जुड़ें!",
+  "joinTelegramDesc": "तुरंत अपडेट प्राप्त करें, विशेष सामग्री प्राप्त करें, और समर्थन वाले व्यक्तियों से जुड़ें। बातचीत का हिस्सा बनें!",
+  "JoinNow": "अभी शामिल हों"
 }
