--- a/Sources/Constants/Languages/Portuguese.json
+++ b/Sources/Constants/Languages/Portuguese.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "Para garantir que você receba as melhores ofertas personalizadas, precisamos saber seu idioma.",
   "Terms": "Termos",
   "Security": "Segurança",
-  "Notice": "Aviso",
   "ChildrensPrivacy": "Privacidade das Crianças",
   "ChangestoThisPrivacyPolicy": "Alterações a esta Política de Privacidade",
-  "terms_text_0": "Get Diamond - emotes O plano fornece este serviço gratuitamente e destina-se a ser usado. Esta página é usada para informar os visitantes sobre minha política relativa à coleta, uso e divulgação de informações pessoais se alguém decidir usar meus Serviços. Se você optar por usar meu serviço, concorda com a coleta e uso dessas informações. As informações pessoais que coleto são usadas para fornecer e melhorar o Serviço. Não usarei nem compartilharei suas informações com ninguém, exceto conforme descrito nesta política de privacidade. Os termos usados nesta política de privacidade têm o mesmo significado que em nossos Termos e Condições, disponíveis em Get Diamond - Emotes Tips, salvo disposição em contrário nesta política de privacidade.",
-  "terms_text_1": "Agradeço sua confiança ao fornecer suas informações pessoais, motivo pelo qual nos esforçamos para protegê-las usando práticas aceitáveis de segurança. Mas lembre-se de que nenhum método de transmissão pela Internet, ou método de segurança eletrônica, é 100% seguro e confiável, e não posso garantir sua segurança absoluta.",
-  "terms_text_2": "Esses serviços não se destinam a pessoas menores de 13 anos. Não recolho conscientemente informações de identificação pessoal de crianças menores de 13 anos. Se eu descobrir que uma criança menor de 13 anos forneceu informações pessoais, eu as excluirei imediatamente de nossos servidores. Se você é pai ou responsável e sabe que seu filho nos forneceu informações pessoais, entre em contato para que eu possa tomar medidas.",
-  "terms_text_3": "Posso atualizar nossa política de privacidade periodicamente. Portanto, é recomendável que você verifique esta página periodicamente para verificar alterações. Notificarei você sobre quaisquer alterações postando uma nova política de privacidade nesta página.",
-  "terms_text_4": "Observe que fazer alterações no aplicativo ou em seus componentes é estritamente proibido e pode resultar em violação de nossos Termos de Serviço.",
   "English": "Inglês",
   "German": "Alemão",
   "Hindi": "Hindi",
@@ -594,5 +588,16 @@
   "playGames": "Jogar Jogos",
   "playGamesDesc": "Comece sua aventura com um toque - Jogue Agora!",
   "playQuiz": "Jogar Quiz",
-  "playQuizDesc": "Mergulhe no conhecimento - Hora do Quiz, Jogue Agora!"
+  "playQuizDesc": "Mergulhe no conhecimento - Hora do Quiz, Jogue Agora!",
+  "ContentLiability": "Responsabilidade pelo Conteúdo",
+  "ReservationofRights": "Reserva de Direitos",
+  "Disclaimer": "Aviso Legal",
+  "terms_text_0": "Bem-vindo ao Apps!\n\nEstes termos e condições delineiam as regras e regulamentos para o uso do App.\n\nAo usar este aplicativo, assumimos que você aceita estes termos e condições. Não continue a usar Apps se você não concordar em aceitar todos os termos e condições declarados nesta página.\n\nA terminologia a seguir se aplica a estes Termos e Condições, Declaração de Privacidade e Aviso Legal e todos os Acordos: \"Cliente\", \"Você\" e \"Seu\" referem-se a você, a pessoa que faz login neste site e está em conformidade com os termos e condições da Empresa. \"A Empresa\", \"Nós mesmos\", \"Nós\", \"Nosso\" e \"Nós\" referem-se à nossa Empresa. \"Parte\", \"Partes\" ou \"Nós\", refere-se tanto ao Cliente quanto a nós mesmos. Todos os termos referem-se à oferta, aceitação e consideração do pagamento necessário para realizar o processo de nossa assistência ao Cliente da maneira mais apropriada para o propósito expresso de atender às necessidades do Cliente em relação à provisão dos serviços declarados da Empresa, de acordo com e sujeito à lei vigente dos Países Baixos. Qualquer uso da terminologia acima ou de outras palavras no singular, plural, capitalização e/ou ele/ela ou eles, são considerados intercambiáveis e, portanto, referem-se ao mesmo.",
+  "terms_text_1": "Não nos responsabilizamos por qualquer conteúdo que apareça no seu App. Você concorda em nos proteger e nos defender contra todas as reivindicações que surgirem em nosso App. Nenhum link deve aparecer em qualquer site que possa ser interpretado como difamatório, obsceno ou criminoso, ou que viole, de outra forma, ou advogue a violação ou outra violação dos direitos de terceiros.",
+  "terms_text_2": "Reservamo-nos o direito de solicitar que você remova todos os links ou qualquer link específico para nosso App. Você concorda em remover imediatamente todos os links para nosso App mediante solicitação. Também reservamos o direito de emendar estes termos e condições e sua política de vinculação a qualquer momento. Ao continuar a vincular-se ao nosso App, você concorda em ficar vinculado e seguir estes termos e condições de vinculação.",
+  "terms_text_3": "Na medida máxima permitida pela lei aplicável, excluímos todas as representações, garantias e condições relacionadas ao nosso App e ao uso deste site. Nada nesta declaração de exoneração de responsabilidade irá:\n\nlimitar ou excluir nossa ou sua responsabilidade por morte ou ferimentos pessoais;\nlimitar ou excluir nossa ou sua responsabilidade por fraude ou representação fraudulenta;\nlimitar qualquer uma de nossas ou suas responsabilidades de qualquer forma que não seja permitida pela lei aplicável; ou\nexcluir qualquer uma de nossas ou suas responsabilidades que não possam ser excluídas sob a lei aplicável.\n\nAs limitações e proibições de responsabilidade estabelecidas nesta Seção e em outros lugares nesta declaração: (a) estão sujeitas ao parágrafo anterior; e (b) regem todas as responsabilidades decorrentes da declaração de exoneração de responsabilidade, incluindo responsabilidades decorrentes de contrato, delito e quebra de dever legal.\n\nEnquanto o site e as informações e serviços no site forem fornecidos gratuitamente, não seremos responsáveis por qualquer perda ou dano de qualquer natureza.",
+  "ContactOfficial": "Contato oficial",
+  "joinTelegram": "Junte-se ao nosso Canal no Telegram!",
+  "joinTelegramDesc": "Receba atualizações instantâneas, conteúdo exclusivo e conecte-se com pessoas de ideias similares. Faça parte da conversa!",
+  "JoinNow": "Junte-se Agora"
 }
