--- a/Sources/Constants/Languages/Turkish.json
+++ b/Sources/Constants/Languages/Turkish.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "En iyi kişiselleştirilmiş teklifleri almanız için dilinizi bilmemiz gerekiyor.",
   "Terms": "Şartlar",
   "Security": "Güvenlik",
-  "Notice": "Bildirim",
   "ChildrensPrivacy": "Çocukların Gizliliği",
   "ChangestoThisPrivacyPolicy": "Bu Gizlilik Politikasındaki Değişiklikler",
-  "terms_text_0": "Elmas Al - emotes Planı ücretsiz olarak sunulan bu hizmeti ve hizmetimi kullanacak ziyaretçilerime politikam hakkında bilgi vermek için kullanılır kişisel bilgilerin toplanması, kullanılması ve ifşası hakkında. Hizmetimi kullanmayı seçerseniz, bu bilgilerin toplanmasını ve kullanılmasını kabul edersiniz. Topladığım kişisel bilgiler, Hizmeti sağlamak ve iyileştirmek için kullanılır. Bu gizlilik politikasında belirtilmedikçe, bu gizlilik politikasındaki terimler Get Diamond - Emotes İpuçları Şartlar ve Koşullarımızda aynı anlamı taşır.",
-  "terms_text_1": "Kişisel bilgilerinizi bize sağladığınız için güveninize teşekkür ederiz, bu nedenle kabul edilebilir müşteri uygulamalarını kullanarak korumaya çalışıyoruz. Ancak unutmayın ki İnternet üzerindeki iletim yöntemi veya elektronik güvenlik yöntemi %100 güvenli ve güvenilir değildir, mutlak güvenliğini garanti edemem.",
-  "terms_text_2": "Bu hizmetler 13 yaşın altındaki kişiler için tasarlanmamıştır. Bilerek 13 yaşın altındaki çocuklardan kişisel olarak tanımlanabilir bilgi toplamıyorum. 13 yaşın altındaki bir çocuğun bana kişisel bilgi sağladığını keşfedersem, derhal sunucularımızdan silerim. Eğer bir ebeveyn veya vasiiyseniz ve çocuğunuzun bize kişisel bilgi sağladığını biliyorsanız, lütfen benimle iletişime geçin ki gerekli önlemleri alayım.",
-  "terms_text_3": "Gizlilik politikamızı zaman zaman güncelleyebilirim. Bu nedenle herhangi bir değişiklik için bu sayfayı periyodik olarak kontrol etmeniz önerilir. Herhangi bir değişikliği bu sayfada yeni bir gizlilik politikası yayınlayarak size bildireceğim.",
-  "terms_text_4": "Uygulamada veya bileşenlerinde değişiklik yapmak kesinlikle yasaktır ve Hizmet Şartlarımızı ihlal edebilir.",
   "English": "İngilizce",
   "German": "Almanca",
   "Hindi": "Hintçe",
@@ -594,5 +588,16 @@
   "playGames": "Oyun Oyna",
   "playGamesDesc": "Macerana bir dokunuşla başla - Şimdi Oyna!",
   "playQuiz": "Quiz Oyna",
-  "playQuizDesc": "Bilgiye dal - Quiz Zamanı, Şimdi Oyna!"
+  "playQuizDesc": "Bilgiye dal - Quiz Zamanı, Şimdi Oyna!",
+  "ContentLiability": "İçerik Sorumluluğu",
+  "ReservationofRights": "Hakların Saklı Tutulması",
+  "Disclaimer": "Sorumluluk Reddi",
+  "terms_text_0": "Apps'a hoş geldiniz!\n\nBu şartlar ve koşullar, App'in kullanımı için kuralları ve düzenlemeleri belirtmektedir.\n\nBu uygulamayı kullanarak, bu sayfadaki tüm şartları ve koşulları kabul ettiğinizi varsayıyoruz. Eğer bu sayfadaki tüm şartlar ve koşulları kabul etmiyorsanız Apps'ı kullanmaya devam etmeyiniz.\n\nAşağıdaki terimler ve koşullar, Gizlilik Bildirimi ve Feragatname Bildirimi ve tüm Anlaşmalar için geçerlidir: \"Müşteri\", \"Siz\" ve \"Sizin\" size, bu web sitesine giriş yapan ve Şirket'in şartlarını ve koşullarını yerine getiren kişiye atıfta bulunur. \"Şirket\", \"Biz\", \"Kendi\", \"Bizim\" ve \"Bize\" şirketimize atıfta bulunur. \"Taraf\", \"Taraflar\" veya \"Biz\" hem Müşteri hem de bizim için geçerlidir. Tüm terimler, Şirket'in belirtilen hizmetlerinin sağlanmasıyla ilgili olarak Müşterinin ihtiyaçlarını karşılamak için en uygun şekilde Müşteri'ye yardım sürecini gerçekleştirmek için gerekli öneri, kabul ve ödeme düşüncesini ifade eder ve Hollanda yasalarına uygun olarak mevcut. Yukarıdaki terminolojinin veya diğer kelimelerin tekil, çoğul, büyük harfli ve/veya o/siz veya onlar olarak kabul edildiği ve bu nedenle aynı şekilde atıfta bulunduğu kabul edilir.",
+  "terms_text_1": "App'inizde görünen herhangi bir içerikten sorumlu olmayacağız. App'imizde ortaya çıkan tüm iddialara karşı bizi koruyup savunmayı kabul edersiniz. Aşağılayıcı, müstehcen veya suç olarak yorumlanabilecek veya üçüncü taraf haklarını ihlal eden, aksini belirten veya savunan hiçbir bağlantı web sitesinde görünmemelidir.",
+  "terms_text_2": "App'imizdeki tüm bağlantıları veya belirli bir bağlantıyı kaldırmanızı isteme hakkını saklı tutarız. Talep üzerine App'imizle ilgili tüm bağlantıları derhal kaldırma konusunda anlaşmaya varırsınız. Ayrıca, bu şartları ve koşulları ve bağlama politikamızı istediğimiz zaman değiştirme hakkını da saklı tutarız. App'imizle sürekli olarak bağlantı kurarak, bu bağlantı şartlarını ve koşullarını kabul ettiğinizi ve izlediğinizi kabul edersiniz.",
+  "terms_text_3": "Uygulanabilir yasa tarafından izin verilen maksimum ölçüde, App'imiz ve bu web sitesinin kullanımı ile ilgili tüm temsil ve garantileri ve şartları hariç tutarız. Bu feragatnamede hiçbir şey:\n\nölüm veya kişisel yaralanma için sorumluluğumuzu veya size sınırlamayacağız veya hariç tutacağız;\ndolandırıcılık veya dolandırıcılık temsilini veya sınırlamayacağız veya hariç tutacağız;\nuygulanabilir yasalar altında izin verilmeyen herhangi bir şekilde bizim veya sizin sorumluluğumuzu sınırlamayacağız;\nuygulanabilir yasa altında hariç tutulamayacak herhangi bir şekilde bizim veya sizin sorumluluğumuzu hariç tutmayacağız.\n\nBu feragatnamede belirtilen sorumluluk ve yasaklamalar, (a) önceki paragrafa tabidir ve (b) sözleşme, haksız fiil ve yasal yükümlülük ihlali dahil olmak üzere feragatnameden kaynaklanan tüm sorumlulukları yönetir.",
+  "ContactOfficial": "Resmi İletişim",
+  "joinTelegram": "Telegram Kanalımıza Katılın!",
+  "joinTelegramDesc": "Anlık güncellemeleri alın, özel içeriklere erişin ve benzer düşünen insanlarla bağlantı kurun. Konuşmanın bir parçası olun!",
+  "JoinNow": "Şimdi Katılın"
 }
