--- a/Sources/Constants/Languages/Chinese.json
+++ b/Sources/Constants/Languages/Chinese.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "为了确保您收到最佳的个性化优惠，我们需要知道您的语言。",
   "Terms": "条款",
   "Security": "安全性",
-  "Notice": "注意事项",
   "ChildrensPrivacy": "儿童隐私",
   "ChangestoThisPrivacyPolicy": "隐私政策变更",
-  "terms_text_0": "获取钻石 - 表情符号计划免费提供此服务，旨在使用。本页用于通知访客我在使用我的服务时关于收集、使用和披露个人信息的政策。如果您选择使用我的服务，则表示您同意收集和使用此信息。我收集的个人信息用于提供和改进服务。除非在本隐私政策中另有说明，否则我不会使用或与任何人分享您的信息。",
-  "terms_text_1": "感谢您信任我们提供您的个人信息，因此我们努力使用可接受的客户实践来保护它。但请记住，互联网传输或电子安全方法无法保证100%安全可靠，我无法保证其绝对安全性。",
-  "terms_text_2": "本服务不适用于13岁以下的人士。我不会故意收集13岁以下儿童的个人身份信息。如果我发现13岁以下儿童向我提供个人信息，我将立即从我们的服务器中删除。如果您是父母或监护人，并且您知道您的孩子向我们提供了个人信息，请联系我以便采取行动。",
-  "terms_text_3": "我可能会不时更新我们的隐私政策。因此建议您定期查看此页面以了解任何变更。我将通过在此页面上发布新的隐私政策来通知您任何变更。",
-  "terms_text_4": "请注意，严禁对应用程序或其组件进行更改，否则可能会违反我们的服务条款。",
   "English": "英语",
   "German": "德语",
   "Hindi": "印地语",
@@ -588,5 +582,16 @@
   "playGames": "玩游戏",
   "playGamesDesc": "点击开始你的冒险 - 立即玩！",
   "playQuiz": "玩测验",
-  "playQuizDesc": "沉浸在知识中 - 测验时间，立即玩！"
+  "playQuizDesc": "沉浸在知识中 - 测验时间，立即玩！",
+  "ContentLiability": "内容责任",
+  "ReservationofRights": "权利保留",
+  "Disclaimer": "免责声明",
+  "terms_text_0": "欢迎使用应用程序！\n\n这些条款和条件概述了使用应用程序的规则和规定。\n\n通过使用此应用程序，我们假定您接受这些条款和条件。如果您不同意接受此页面上列出的所有条款和条件，请不要继续使用应用程序。\n\n以下术语适用于这些条款和条件、隐私声明和免责声明以及所有协议：“客户”、“您”和“您的”是指登录此网站并遵守公司条款和条件的您。“公司”、“我们”、“我们的”和“我们”是指我们的公司。“方”、“各方”或“我们”是指客户和我们。所有条款均指为向客户提供公司声明的服务以满足客户需求而进行的报价、接受和支付的必要考虑，且符合荷兰现行法律。上述术语或其他单词的单数、复数、首字母大写和/或他/她或他们的任何使用，均视为可以互换，因此指代相同的内容。",
+  "terms_text_1": "我们不对您应用程序上出现的任何内容负责。您同意保护和维护我们免受因我们应用程序引起的所有索赔。任何链接不得出现在可能被解释为诽谤、淫秽或犯罪的任何网站上，或侵犯、其他方式违反或提倡侵犯或其他违反任何第三方权利的内容。",
+  "terms_text_2": "我们保留要求您删除所有链接或任何特定链接到我们应用程序的权利。您同意在收到请求后立即删除所有链接到我们应用程序。我们还保留随时修改这些条款和条件及其链接政策的权利。通过持续链接到我们应用程序，您同意受这些链接条款和条件的约束并遵循它们。",
+  "terms_text_3": "在适用法律允许的最大范围内，我们排除与我们应用程序及其使用有关的所有陈述、保证和条件。免责声明中的任何内容均不会：\n\n限制或排除我们或您对死亡或人身伤害的责任；\n限制或排除我们或您对欺诈或欺诈性虚假陈述的责任；\n以任何适用法律不允许的方式限制我们或您的任何责任；或\n排除适用法律可能不允许排除的我们或您的任何责任。\n\n本节和免责声明其他部分规定的责任限制和禁止：（a）受前段规定的约束；以及（b）适用于免责声明下产生的所有责任，包括合同责任、侵权责任和违反法定义务的责任。\n\n只要网站及其上的信息和服务是免费提供的，我们将不对任何性质的任何损失或损害承担责任。",
+  "ContactOfficial": "官方联系",
+  "joinTelegram": "加入我们的Telegram频道！",
+  "joinTelegramDesc": "即时获取更新，独家内容，并与志同道合的人们联系。成为对话的一部分！",
+  "JoinNow": "立即加入"
 }
