--- a/Sources/Constants/Languages/English.json
+++ b/Sources/Constants/Languages/English.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "To make sure you receive the best personalized offers we need to know your language.",
   "Terms": "Terms",
   "Security": "Security",
-  "Notice": "Notice",
   "ChildrensPrivacy": "Children's Privacy",
   "ChangestoThisPrivacyPolicy": "Changes to This Privacy Policy",
-  "terms_text_0": "Get Diamond - emotes The plan provides this service for free and is intended to be used. This page is used to inform visitors of my policy regarding the collection, use, and disclosure of personal information if anyone decides to use my Services. If you choose to use my service, you consent to the collection and use of this information. The personal information I collect is used to provide and improve the Service. I will not use or share your information with anyone except as described in this privacy policy Terms used in this privacy policy have the same meaning as in our Terms and Conditions, available at Get Diamond - Emotes Tips, unless otherwise specified in this privacy policy.",
-  "terms_text_1": "I appreciate your trust in providing us with your personal information, which is why we strive to protect it using acceptable customer practices. But remember that no method of transmission on the Internet, or method of electronic security, is 100% secure and reliable, I cannot guarantee its absolute security.",
-  "terms_text_2": "These services are not intended for persons under the age of 13. I do not knowingly collect personally identifiable information from children under the age of 13. If I discover that a child under the age of 13 has provided me with personal information, I immediately delete it from our servers. If you are a parent or guardian and you know that your child has provided us with personal information, please contact me so that I can take action.",
-  "terms_text_3": "I may update our privacy policy from time to time. You are therefore advised to check this page periodically for any changes. I will notify you of any changes by posting a new privacy policy on this page.",
-  "terms_text_4": "Please note that making changes to the App or its components is strictly prohibited and may result in a violation of our Terms of Service.",
   "English": "English",
   "German": "German",
   "Hindi": "Hindi",
@@ -594,5 +588,16 @@
   "playGames": "Play Games",
   "playGamesDesc": "Embark on your adventure with a tap - Play Now!",
   "playQuiz": "Play Quiz",
-  "playQuizDesc": "Dive into knowledge - Quiz Time, Play Now!"
+  "playQuizDesc": "Dive into knowledge - Quiz Time, Play Now!",
+  "ContentLiability": "Content Liability",
+  "ReservationofRights": "Reservation of Rights",
+  "Disclaimer": "Disclaimer",
+  "terms_text_0": "Welcome to Apps!\n\nThese terms and conditions outline the rules and regulations for the use of App.\n\nBy using this app we assume you accept these terms and conditions. Do not continue to use Apps if you do not agree to take all of the terms and conditions stated on this page.\n\nThe following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: \"Client\", \"You\" and \"Your\" refers to you, the person log on this website and compliant to the Company’s terms and conditions. \"The Company\", \"Ourselves\", \"We\", \"Our\" and \"Us\", refers to our Company. \"Party\", \"Parties\", or \"Us\", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.",
+  "terms_text_1": "We shall not be hold responsible for any content that appears on your App. You agree to protect and defend us against all claims that is rising on our App. No link(s) should appear on any Website that may be interpreted as libelous, obscene or criminal, or which infringes, otherwise violates, or advocates the infringement or other violation of, any third party rights.",
+  "terms_text_2": "We reserve the right to request that you remove all links or any particular link to our App. You approve to immediately remove all links to our App upon request. We also reserve the right to amen these terms and conditions and it's linking policy at any time. By continuously linking to our App, you agree to be bound to and follow these linking terms and conditions.",
+  "terms_text_3": "To the maximum extent permitted by applicable law, we exclude all representations, warranties and conditions relating to our App and the use of this website. Nothing in this disclaimer will:\n\nlimit or exclude our or your liability for death or personal injury;\nlimit or exclude our or your liability for fraud or fraudulent misrepresentation;\nlimit any of our or your liabilities in any way that is not permitted under applicable law; or\nexclude any of our or your liabilities that may not be excluded under applicable law.\n\nThe limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.\n\nAs long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.",
+  "ContactOfficial": "Contact Official",
+  "joinTelegram": "Join Our Telegram Channel!",
+  "joinTelegramDesc": "Get instant updates, exclusive content, and connect with like-minded individuals. Be part of the conversation!",
+  "JoinNow": "Join Now"
 }
