--- a/Sources/Constants/Languages/Japanese.json
+++ b/Sources/Constants/Languages/Japanese.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "最適なパーソナライズされたオファーを受け取るために、あなたの言語を知る必要があります。",
   "Terms": "利用規約",
   "Security": "セキュリティ",
-  "Notice": "通知",
   "ChildrensPrivacy": "子供のプライバシー",
   "ChangestoThisPrivacyPolicy": "このプライバシーポリシーの変更",
-  "terms_text_0": "Get Diamond - Emotesプランは無料でこのサービスを提供し、使用することを意図しています。このページは、私のサービスを使用することを決定した場合に、個人情報の収集、使用、および開示に関する私の方針を訪問者に通知するために使用されます。私のサービスを使用することを選択した場合、この情報の収集と使用に同意したことになります。収集された個人情報は、サービスを提供および改善するために使用されます。このプライバシーポリシーに記載されている場合を除き、情報を他者と共有することはありません。このプライバシーポリシーで使用される用語は、特に明記されていない限り、Get Diamond - Emotes Tipsの利用規約と同じ意味を持ちます。",
-  "terms_text_1": "私たちに個人情報を提供していただくことに感謝し、許容できる顧客慣行を使用してそれを保護するよう努めます。しかし、インターネット上の送信方法や電子的なセキュリティ方法は100％安全で信頼できるわけではなく、その絶対的な安全性を保証することはできません。",
-  "terms_text_2": "これらのサービスは13歳未満の者を対象としていません。13歳未満の子供から個人を特定できる情報を故意に収集することはありません。13歳未満の子供が私に個人情報を提供したことが判明した場合、すぐにサーバーから削除します。あなたが親または保護者であり、お子様が私たちに個人情報を提供したことを知っている場合は、連絡してください。すぐに対処いたします。",
-  "terms_text_3": "プライバシーポリシーは、時折更新することがあります。そのため、変更がないか定期的にこのページを確認することをお勧めします。変更がある場合は、このページに新しいプライバシーポリシーを掲載することで通知します。",
-  "terms_text_4": "アプリやそのコンポーネントを変更することは禁止されており、利用規約に違反する可能性があります。",
   "English": "英語",
   "German": "ドイツ語",
   "Hindi": "ヒンディー語",
@@ -594,5 +588,16 @@
   "playGames": "ゲームをプレイ",
   "playGamesDesc": "タップで冒険を始めよう - 今すぐプレイ！",
   "playQuiz": "クイズをプレイ",
-  "playQuizDesc": "知識に飛び込もう - クイズタイム、今すぐプレイ！"
+  "playQuizDesc": "知識に飛び込もう - クイズタイム、今すぐプレイ！",
+  "ContentLiability": "コンテンツの責任",
+  "ReservationofRights": "権利の保留",
+  "Disclaimer": "免責事項",
+  "terms_text_0": "Appsへようこそ！\n\nこれらの利用規約は、Appの利用に関するルールと規制を概説しています。\n\nこのアプリを使用することで、あなたはこれらの利用規約を承諾したものとみなされます。このページに記載されているすべての利用規約に同意しない場合は、Appsの利用を継続しないでください。\n\n以下の用語は、これらの利用規約、プライバシーステートメント、免責事項、およびすべての契約に適用されます。「クライアント」、「あなた」、「お客様」とは、このウェブサイトにログインし、会社の利用規約に準拠する個人を指します。 「会社」、「私たち自身」、「私たち」、「私たちの」、「私たち」とは、私たちの会社を指します。 「当事者」、「当事者」または「私たち」とは、クライアントと私たちの両方を指します。 すべての用語は、オファー、受諾、および支払いの検討として必要な支払いを意味し、クライアントのニーズを満たすために私たちの支援プロセスを適切な方法で行うための、オランダの法律に従って、適用される法律に従って提供される会社の指定されたサービスの供給に関連するすべての用語を示しています。 上記の用語や他の単語の使用、単数形、複数形、大文字小文字、および/または彼/彼女またはそれらは交換可能として扱われ、したがって同じものを指します。",
+  "terms_text_1": "私たちはあなたのアプリに表示されるコンテンツについて責任を負いません。 私たちのアプリで発生したすべてのクレームに対して保護し、防御することに同意します。 誹謗中傷、わいせつ、または犯罪と解釈される可能性があるウェブサイトにリンクされているもの、または第三者の権利を侵害し、またはその他の侵害を支持するものは、いかなるリンクも表示されません。",
+  "terms_text_2": "私たちは、あなたに対してすべてのリンクまたは私たちのアプリへの特定のリンクの削除を要求する権利を留保します。 要求があった場合、即座に私たちのアプリへのすべてのリンクを削除することに同意します。 また、これらのリンクの条件とポリシーをいつでも変更する権利を留保します。 私たちのアプリに継続的にリンクすることにより、これらのリンクの条件と規定に拘束され、これに従うことに同意します。",
+  "terms_text_3": "適用可能な法律に許される限り、私たちは私たちのアプリとこのウェブサイトの使用に関連するすべての表明、保証、および条件を除外します。 この免責事項には次の内容が含まれていません：\n\n死亡または個人傷害に対する私たちまたはあなたの責任を制限または除外しないこと；\n詐欺または不正な虚偽表示に対する私たちまたはあなたの責任を制限または除外しないこと；\n適用可能な法律に許可されていない方法で私たちまたはあなたのいずれかの責任を制限すること；または\n適用可能な法律によって除外できない私たちまたはあなたのいずれかの責任を除外すること。\n\nこの節および免責事項の他の場所で設定された責任の制限および禁止は、（a）前段落に従うものとし、（b）免責事項の下で生じるすべての責任、契約、不法行為および法定義務違反に関連する責任を規制します。\n\nウェブサイトとウェブサイト上の情報およびサービスが無料で提供される限り、私たちはいかなる自然の損害または損失に対しても責任を負いません。",
+  "ContactOfficial": "公式連絡",
+  "joinTelegram": "Telegramチャンネルに参加しましょう！",
+  "joinTelegramDesc": "即時の更新情報や独占コンテンツを入手し、志を同じくする仲間とつながりましょう。会話の一部となりましょう！",
+  "JoinNow": "今すぐ参加"
 }
