--- a/Sources/Constants/Languages/Korean.json
+++ b/Sources/Constants/Languages/Korean.json
@@ -21,14 +21,8 @@
   "SelectyourLanguagesDesc": "개인 맞춤형 최상의 제안을 받으려면 사용하는 언어를 알려주세요.",
   "Terms": "약관",
   "Security": "보안",
-  "Notice": "알림",
   "ChildrensPrivacy": "어린이 개인정보 보호",
   "ChangestoThisPrivacyPolicy": "이 개인정보 보호 정책의 변경 사항",
-  "terms_text_0": "다이아몬드 - 이모티콘은 이 무료 서비스를 제공하며 사용하기 위한 것입니다. 이 페이지는 방문자들에게 제 서비스를 사용하는 경우 개인 정보 수집, 사용 및 공개에 대한 정책을 알리는 데 사용됩니다. 만약 여러분이 제 서비스를 사용하기로 결정하신다면, 이 정보의 수집과 사용에 동의하게 됩니다. 저는 이 정보를 제공하고 서비스를 개선하기 위해 개인 정보를 사용할 것입니다. 이 개인 정보는 본 개인정보 보호 정책에서 명시되지 않은 한 제 용어 및 조건, 다이아몬드 - 이모티콘 팁의 용어와 동일한 의미를 갖습니다.",
-  "terms_text_1": "귀하의 개인 정보를 제공해 주셔서 감사합니다. 귀하의 신뢰를 지키기 위해 적절한 고객 관행을 사용하여 보호하겠습니다. 그러나 인터넷을 통한 전송 방법이나 전자적 보안 방법은 절대적으로 안전하고 신뢰할 수 있는 것은 아니므로 절대적인 보안을 보장할 수는 없습니다.",
-  "terms_text_2": "본 서비스는 만 13세 미만의 사람들을 대상으로 하지 않습니다. 만 13세 미만 어린이의 개인 식별 가능한 정보를 의도적으로 수집하지 않습니다. 만일 만 13세 미만의 어린이가 개인 정보를 제공했음을 발견하면 즉시 서버에서 삭제할 것입니다. 만일 여러분이 부모님이시거나 보호자이시고 귀하의 자녀가 저희에게 개인 정보를 제공했음을 알고 계시다면, 저에게 연락하여 조치를 취할 수 있도록 도와주세요.",
-  "terms_text_3": "저는 때때로 우리의 개인정보 보호 정책을 업데이트할 수 있습니다. 그러므로 여러분은 정기적으로 이 페이지를 확인하시기 바랍니다. 저는 이 페이지에 새로운 개인정보 보호 정책을 게시함으로써 여러분에게 변경 사항을 알리겠습니다.",
-  "terms_text_4": "앱이나 그 구성 요소를 변경하는 것은 엄격히 금지되어 있으며, 저희 서비스 약관을 위반할 수 있습니다.",
   "English": "영어",
   "German": "독일어",
   "Hindi": "힌디어",
@@ -594,5 +588,16 @@
   "playGames": "게임 플레이",
   "playGamesDesc": "한 번의 탭으로 모험을 시작하세요 - 지금 플레이!",
   "playQuiz": "퀴즈 플레이",
-  "playQuizDesc": "지식을 탐험하세요 - 퀴즈 타임, 지금 플레이!"
+  "playQuizDesc": "지식을 탐험하세요 - 퀴즈 타임, 지금 플레이!",
+  "ContentLiability": "콘텐츠 책임",
+  "ReservationofRights": "권리 보유",
+  "Disclaimer": "면책 조항",
+  "terms_text_0": "Apps에 오신 것을 환영합니다!\n\n이 앱의 사용 규칙과 규정을 설명하는 이용 약관입니다.\n\n이 앱을 사용함으로써 이 페이지에 명시된 모든 이용 약관을 동의한 것으로 간주됩니다. 본 페이지에 명시된 모든 이용 약관에 동의하지 않는 경우 Apps의 사용을 계속하지 마십시오.\n\n다음 용어는 이 이용 약관, 개인정보 보호 정책 및 면책 공지와 모든 계약에 적용됩니다: \"고객\", \"당신\" 및 \"귀하\"는 본 웹사이트에 로그인하고 회사의 이용 약관을 준수하는 개인을 의미합니다. \"회사\", \"우리 자신\", \"우리\", \"우리의\" 및 \"우리\"는 우리 회사를 의미합니다. \"당사자\", \"당사자\", 또는 \"우리\"는 고객과 우리 자신을 모두 가리킵니다. 모든 용어는 회사의 명시된 서비스의 제공과 관련하여 고객의 요구를 충족시키기 위해 가장 적절한 방법으로 고객을 지원하는 프로세스를 수행하기 위해 필요한 제안, 수락 및 지급 고려를 의미합니다. 네덜란드의 적용 법에 따라 적용됩니다. 상기 용어나 다른 단어의 사용, 단수형, 복수형, 대문자 및/또는 그/그녀 또는 그들은 상호 교환 가능하게 취급되며, 따라서 동일한 것을 가리킵니다.",
+  "terms_text_1": "당사는 귀하의 앱에 표시된 콘텐츠에 대해 책임을지지 않습니다. 당사의 앱에서 발생한 모든 클레임에 대해 보호하고 방어하기로 동의합니다. 비방적이거나 음란하거나 범죄적으로 해석 될 수있는 웹 사이트에 링크 된 것 또는 제3 자의 권리를 침해하거나 기타 위반을 지지하지 않는 링크는 어떠한 링크도 표시 되어 있지 않아야 합니다.",
+  "terms_text_2": "우리는 당신에게 모든 링크 또는 우리의 앱에 대한 특정 링크의 제거를 요청 할 권리를 보유합니다. 요청시 즉시 우리의 앱에 대한 모든 링크를 제거하기로 동의합니다. 또한 이러한 조건과 정책을 언제든지 수정할 권리를 보유합니다. 우리의 앱에 지속적으로 링크하는 것으로,이 링크 조건과 조건을 준수하기로 동의합니다.",
+  "terms_text_3": "적용 가능한 법률이 허용하는 최대 한도 내에서, 우리는 우리의 앱 및 이 웹 사이트 사용과 관련된 모든 표현, 보증 및 조건을 배제합니다. 이 면책 성명에는 다음 사항이 포함되지 않습니다:\n\n사망 또는 개인 상해에 대한 우리 또는 귀하의 책임을 제한하거나 배제하지 않는 것;\n사기 또는 부정한 허위 진술에 대한 우리 또는 귀하의 책임을 제한하거나 배제하지 않는 것;\n적용 가능한 법률에 따라 허용되지 않는 방식으로 우리 또는 귀하의 책임을 어떠한 방식으로든 제한하는 것;\n적용 가능한 법률에 따라 배제 할 수없는 우리 또는 귀하의 책임을 배제하는 것.\n\n이 면책 성명의 제한 및 금지 조항은 다음과 같습니다. (a) 앞의 단락에 따라 하고 (b) 면책 성명에 따라 발생하는 모든 책임을 관리합니다. 계약, 불법 행위 및 법적 의무 위반에 대한 책임.",
+  "ContactOfficial": "공식 연락처",
+  "joinTelegram": "텔레그램 채널 가입하기!",
+  "joinTelegramDesc": "즉시 업데이트를 받고, 독점 콘텐츠를 이용하며, 유사한 관심을 가진 사람들과 연결하세요. 대화에 참여해 보세요!",
+  "JoinNow": "지금 가입하기"
 }
